Adds services#index to API
